--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
+
 android {
     compileSdkVersion 26
     buildToolsVersion '26.0.3'
@@ -27,12 +33,17 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+
     implementation 'com.elyeproj.libraries:loaderviewlibrary:1.3.0'
+
+    // Dependencies for kotlin:
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.2.21"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.2"
+    implementation "ru.gildor.coroutines:kotlin-coroutines-retrofit:0.9.0"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.2.21"
 
     // Dependencies for Android Architecture Components: Lifecycle, LiveData, and ViewModel
     implementation "android.arch.lifecycle:extensions:1.1.0"
