--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     kapt "android.arch.lifecycle:compiler:1.1.0"
 
     testImplementation 'junit:junit:4.12'
+    testCompile 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-alpha03'
     testImplementation 'org.mockito:mockito-core:2.13.0'
 }
