--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,22 +3,16 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
-}
-
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.example.coroutinestate"
         minSdkVersion 23
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -30,27 +24,33 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'com.elyeproj.libraries:loaderviewlibrary:1.3.0'
 
     // Dependencies for kotlin:
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.2.21"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.2"
-    implementation "ru.gildor.coroutines:kotlin-coroutines-retrofit:0.9.0"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.2.21"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.31"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1"
+    implementation "ru.gildor.coroutines:kotlin-coroutines-retrofit:1.1.0"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.2.30"
 
     // Dependencies for Android Architecture Components: LiveData, and ViewModel
-    implementation "android.arch.lifecycle:extensions:1.1.0"
-    kapt "android.arch.lifecycle:compiler:1.1.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha01"
+
+    //Dependencies for Espresso
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.2.0"
+    androidTestImplementation("androidx.test.espresso:espresso-contrib:3.2.0")
 
     testImplementation 'junit:junit:4.12'
-    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-alpha03'
-    testImplementation 'org.mockito:mockito-core:2.13.0'
-    testImplementation "android.arch.core:core-testing:1.1.0"
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+    testImplementation 'org.mockito:mockito-core:2.27.0'
+    testImplementation "androidx.room:room-testing:2.1.0-rc01"
+    androidTestImplementation "androidx.room:room-testing:2.1.0-rc01"
 }
